--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "version-comparison/"
+            "App\\": "version-comparison/",
+            "Factory\\": "factory-method/"
         }
     }
 }
